--- a/PGL/PetGL.ui
+++ b/PGL/PetGL.ui
@@ -22,7 +22,7 @@
      <x>0</x>
      <y>0</y>
      <width>731</width>
-     <height>29</height>
+     <height>20</height>
     </rect>
    </property>
    <widget class="QMenu" name="menuFile">
@@ -44,7 +44,7 @@
    <property name="minimumSize">
     <size>
      <width>300</width>
-     <height>183</height>
+     <height>226</height>
     </size>
    </property>
    <property name="windowTitle">
@@ -113,37 +113,8 @@
        </widget>
       </widget>
      </item>
-    </layout>
-   </widget>
-  </widget>
-  <widget class="QDockWidget" name="PluginPanel">
-   <property name="sizePolicy">
-    <sizepolicy hsizetype="Expanding" vsizetype="Expanding">
-     <horstretch>0</horstretch>
-     <verstretch>0</verstretch>
-    </sizepolicy>
-   </property>
-   <property name="windowTitle">
-    <string>Plugin Panel</string>
-   </property>
-   <attribute name="dockWidgetArea">
-    <number>1</number>
-   </attribute>
-   <widget class="QWidget" name="dockWidgetContents">
-    <layout class="QVBoxLayout" name="verticalLayout_3">
      <item>
-      <widget class="QTabWidget" name="tabWidget_2">
-       <widget class="QWidget" name="tab_3">
-        <attribute name="title">
-         <string>Tab 1</string>
-        </attribute>
-       </widget>
-       <widget class="QWidget" name="tab_4">
-        <attribute name="title">
-         <string>Tab 2</string>
-        </attribute>
-       </widget>
-      </widget>
+      <widget class="QTabWidget" name="tabPlugin"/>
      </item>
     </layout>
    </widget>
