--- a/elastic/elasticpanel.ui
+++ b/elastic/elasticpanel.ui
@@ -6,8 +6,8 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>392</width>
-    <height>592</height>
+    <width>327</width>
+    <height>379</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -30,67 +30,35 @@
       <item row="2" column="0">
        <widget class="QPushButton" name="clearcurves">
         <property name="text">
-         <string>clear selected curves</string>
+         <string>clear curves</string>
         </property>
        </widget>
       </item>
       <item row="2" column="1">
        <widget class="QPushButton" name="clearvertices">
         <property name="text">
-         <string>clear selected vertices</string>
+         <string>clear  vertices</string>
         </property>
        </widget>
       </item>
       <item row="0" column="0">
        <widget class="QPushButton" name="pushButton_wholeCurvesVertices">
         <property name="text">
-         <string>whole curves' vertices</string>
+         <string>curves vertices</string>
         </property>
        </widget>
       </item>
       <item row="1" column="1">
        <widget class="QPushButton" name="pushButton_VerticesFromCurves">
         <property name="text">
-         <string>vertices from selected curve</string>
+         <string>vertices from curve</string>
         </property>
        </widget>
       </item>
       <item row="0" column="1">
        <widget class="QPushButton" name="pushButton_wholeCurvesInteriorVertices">
         <property name="text">
-         <string>whole curves' interior</string>
-        </property>
-       </widget>
-      </item>
-     </layout>
-    </widget>
-   </item>
-   <item row="1" column="0">
-    <widget class="QGroupBox" name="groupBox_2">
-     <property name="title">
-      <string>Intersection</string>
-     </property>
-     <layout class="QGridLayout" name="gridLayout_3">
-      <item row="0" column="0">
-       <widget class="QDoubleSpinBox" name="doubleSpinBox_collisionradius">
-        <property name="decimals">
-         <number>4</number>
-        </property>
-        <property name="maximum">
-         <double>1.000000000000000</double>
-        </property>
-        <property name="singleStep">
-         <double>0.001000000000000</double>
-        </property>
-        <property name="value">
-         <double>0.001000000000000</double>
-        </property>
-       </widget>
-      </item>
-      <item row="0" column="1">
-       <widget class="QPushButton" name="pushButton_intersection">
-        <property name="text">
-         <string>get intersections</string>
+         <string>curves interior</string>
         </property>
        </widget>
       </item>
@@ -103,6 +71,20 @@
       <string>Optimize</string>
      </property>
      <layout class="QGridLayout" name="gridLayout">
+      <item row="5" column="1">
+       <widget class="QPushButton" name="pushButton_clear">
+        <property name="text">
+         <string>clear</string>
+        </property>
+       </widget>
+      </item>
+      <item row="1" column="1">
+       <widget class="QDoubleSpinBox" name="doubleSpinBox_BendingEnergyCoef">
+        <property name="value">
+         <double>1.000000000000000</double>
+        </property>
+       </widget>
+      </item>
       <item row="4" column="1">
        <widget class="QPushButton" name="pushButton_test">
         <property name="text">
@@ -113,13 +95,13 @@
       <item row="2" column="1">
        <widget class="QDoubleSpinBox" name="doubleSpinBox_TangentConstraintsCoef">
         <property name="decimals">
-         <number>1</number>
+         <number>2</number>
         </property>
         <property name="maximum">
-         <double>1000.000000000000000</double>
+         <double>100.000000000000000</double>
         </property>
         <property name="value">
-         <double>10.000000000000000</double>
+         <double>1.000000000000000</double>
         </property>
        </widget>
       </item>
@@ -148,13 +130,6 @@
        <widget class="QLabel" name="label">
         <property name="text">
          <string>Tangent Cont. Coef.</string>
-        </property>
-       </widget>
-      </item>
-      <item row="1" column="1">
-       <widget class="QDoubleSpinBox" name="doubleSpinBox_BendingEnergyCoef">
-        <property name="value">
-         <double>1.000000000000000</double>
         </property>
        </widget>
       </item>
@@ -189,6 +164,38 @@
        <widget class="QPushButton" name="pushButton_exprotSelection">
         <property name="text">
          <string>export selection</string>
+        </property>
+       </widget>
+      </item>
+     </layout>
+    </widget>
+   </item>
+   <item row="1" column="0">
+    <widget class="QGroupBox" name="groupBox_2">
+     <property name="title">
+      <string>Intersection</string>
+     </property>
+     <layout class="QGridLayout" name="gridLayout_3">
+      <item row="0" column="0">
+       <widget class="QDoubleSpinBox" name="doubleSpinBox_collisionradius">
+        <property name="decimals">
+         <number>4</number>
+        </property>
+        <property name="maximum">
+         <double>1.000000000000000</double>
+        </property>
+        <property name="singleStep">
+         <double>0.001000000000000</double>
+        </property>
+        <property name="value">
+         <double>0.001000000000000</double>
+        </property>
+       </widget>
+      </item>
+      <item row="0" column="1">
+       <widget class="QPushButton" name="pushButton_intersection">
+        <property name="text">
+         <string>get intersections</string>
         </property>
        </widget>
       </item>
