--- a/elastic/elasticpanel.ui
+++ b/elastic/elasticpanel.ui
@@ -7,7 +7,7 @@
     <x>0</x>
     <y>0</y>
     <width>321</width>
-    <height>699</height>
+    <height>815</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -20,31 +20,38 @@
       <string>Optimize</string>
      </property>
      <layout class="QGridLayout" name="gridLayout">
-      <item row="0" column="0">
-       <widget class="QPushButton" name="pushButton_setInvolved">
+      <item row="14" column="0">
+       <widget class="QLabel" name="label_dt">
         <property name="text">
-         <string>Set points to opt.</string>
+         <string>dt</string>
         </property>
        </widget>
       </item>
-      <item row="2" column="1">
-       <widget class="QPushButton" name="pushButton_clear">
-        <property name="text">
-         <string>clear</string>
+      <item row="6" column="1">
+       <widget class="QDoubleSpinBox" name="doubleSpinBox_BendingEnergyCoef">
+        <property name="value">
+         <double>1.000000000000000</double>
         </property>
        </widget>
       </item>
-      <item row="9" column="0">
-       <widget class="QLabel" name="label_PlaneConstraintsCoef">
+      <item row="4" column="0">
+       <widget class="QPushButton" name="pushButton_twist">
         <property name="text">
-         <string>Plane Cont. Coef.</string>
+         <string>twist</string>
         </property>
        </widget>
       </item>
-      <item row="7" column="0">
-       <widget class="QLabel" name="label">
+      <item row="15" column="0">
+       <widget class="QLabel" name="label_ProjectionIter">
         <property name="text">
-         <string>Twisting Energy Coef.</string>
+         <string>interations</string>
+        </property>
+       </widget>
+      </item>
+      <item row="11" column="1">
+       <widget class="QSpinBox" name="spinBox_extension">
+        <property name="value">
+         <number>2</number>
         </property>
        </widget>
       </item>
@@ -55,60 +62,17 @@
         </property>
        </widget>
       </item>
-      <item row="5" column="0">
-       <widget class="QLabel" name="label_PositionConstraintsWeight">
+      <item row="13" column="0">
+       <widget class="QLabel" name="label_twistFraction">
         <property name="text">
-         <string>Position Weight</string>
+         <string>twist fraction</string>
         </property>
        </widget>
       </item>
-      <item row="10" column="1">
-       <widget class="QDoubleSpinBox" name="doubleSpinBox_collisionradius">
-        <property name="decimals">
-         <number>4</number>
-        </property>
-        <property name="maximum">
-         <double>1.000000000000000</double>
-        </property>
-        <property name="singleStep">
-         <double>0.001000000000000</double>
-        </property>
-        <property name="value">
-         <double>0.001000000000000</double>
-        </property>
-       </widget>
-      </item>
-      <item row="1" column="1">
-       <widget class="QPushButton" name="pushButton_doItRightIter">
+      <item row="9" column="0">
+       <widget class="QLabel" name="label_PlaneConstraintsCoef">
         <property name="text">
-         <string>do it right iter</string>
-        </property>
-       </widget>
-      </item>
-      <item row="11" column="0">
-       <widget class="QLabel" name="label_Extension">
-        <property name="text">
-         <string>Extension</string>
-        </property>
-       </widget>
-      </item>
-      <item row="9" column="1">
-       <widget class="QDoubleSpinBox" name="doubleSpinBox_PlaneConstraintsCoef">
-        <property name="decimals">
-         <number>1</number>
-        </property>
-        <property name="maximum">
-         <double>10000.000000000000000</double>
-        </property>
-        <property name="value">
-         <double>10.000000000000000</double>
-        </property>
-       </widget>
-      </item>
-      <item row="4" column="0">
-       <widget class="QPushButton" name="pushButton_twist">
-        <property name="text">
-         <string>twist</string>
+         <string>Plane Cont. Coef.</string>
         </property>
        </widget>
       </item>
@@ -125,24 +89,17 @@
         </property>
        </widget>
       </item>
-      <item row="0" column="1">
-       <widget class="QPushButton" name="pushButton_optimize">
+      <item row="1" column="1">
+       <widget class="QPushButton" name="pushButton_doItRightIter">
         <property name="text">
-         <string>optimize</string>
+         <string>do it right iter</string>
         </property>
        </widget>
       </item>
-      <item row="11" column="1">
-       <widget class="QSpinBox" name="spinBox_extension">
+      <item row="15" column="1">
+       <widget class="QSpinBox" name="spinBox_ProjectionIter">
         <property name="value">
-         <number>2</number>
-        </property>
-       </widget>
-      </item>
-      <item row="3" column="0">
-       <widget class="QPushButton" name="pushButton_test">
-        <property name="text">
-         <string>test it</string>
+         <number>20</number>
         </property>
        </widget>
       </item>
@@ -153,6 +110,67 @@
         </property>
        </widget>
       </item>
+      <item row="5" column="0">
+       <widget class="QLabel" name="label_PositionConstraintsWeight">
+        <property name="text">
+         <string>Position Weight</string>
+        </property>
+       </widget>
+      </item>
+      <item row="9" column="1">
+       <widget class="QDoubleSpinBox" name="doubleSpinBox_PlaneConstraintsCoef">
+        <property name="decimals">
+         <number>1</number>
+        </property>
+        <property name="maximum">
+         <double>10000.000000000000000</double>
+        </property>
+        <property name="value">
+         <double>10.000000000000000</double>
+        </property>
+       </widget>
+      </item>
+      <item row="14" column="1">
+       <widget class="QDoubleSpinBox" name="doubleSpinBox_dt">
+        <property name="decimals">
+         <number>5</number>
+        </property>
+        <property name="singleStep">
+         <double>0.000100000000000</double>
+        </property>
+        <property name="value">
+         <double>0.000100000000000</double>
+        </property>
+       </widget>
+      </item>
+      <item row="7" column="0">
+       <widget class="QLabel" name="label">
+        <property name="text">
+         <string>Twisting Energy Coef.</string>
+        </property>
+       </widget>
+      </item>
+      <item row="3" column="1">
+       <widget class="QPushButton" name="pushButton_hamiltonProj">
+        <property name="text">
+         <string>Hamilton Proj</string>
+        </property>
+       </widget>
+      </item>
+      <item row="12" column="0">
+       <widget class="QLabel" name="label_twist_times">
+        <property name="text">
+         <string>twist times</string>
+        </property>
+       </widget>
+      </item>
+      <item row="0" column="0">
+       <widget class="QPushButton" name="pushButton_setInvolved">
+        <property name="text">
+         <string>Set points to opt.</string>
+        </property>
+       </widget>
+      </item>
       <item row="1" column="0">
        <widget class="QPushButton" name="pushButton_doitright">
         <property name="text">
@@ -160,10 +178,17 @@
         </property>
        </widget>
       </item>
-      <item row="10" column="0">
-       <widget class="QLabel" name="label_r">
+      <item row="2" column="1">
+       <widget class="QPushButton" name="pushButton_clear">
         <property name="text">
-         <string>r</string>
+         <string>clear</string>
+        </property>
+       </widget>
+      </item>
+      <item row="11" column="0">
+       <widget class="QLabel" name="label_Extension">
+        <property name="text">
+         <string>Extension</string>
         </property>
        </widget>
       </item>
@@ -183,10 +208,63 @@
         </property>
        </widget>
       </item>
-      <item row="6" column="1">
-       <widget class="QDoubleSpinBox" name="doubleSpinBox_BendingEnergyCoef">
+      <item row="13" column="1">
+       <widget class="QDoubleSpinBox" name="doubleSpinBox_twist_fraction">
+        <property name="minimum">
+         <double>-0.500000000000000</double>
+        </property>
+        <property name="maximum">
+         <double>0.500000000000000</double>
+        </property>
+        <property name="singleStep">
+         <double>0.100000000000000</double>
+        </property>
+       </widget>
+      </item>
+      <item row="7" column="1">
+       <widget class="QDoubleSpinBox" name="doubleSpinBox_TwistingEnergyCoef">
+        <property name="maximum">
+         <double>99999.990000000005239</double>
+        </property>
         <property name="value">
+         <double>1000.000000000000000</double>
+        </property>
+       </widget>
+      </item>
+      <item row="0" column="1">
+       <widget class="QPushButton" name="pushButton_optimize">
+        <property name="text">
+         <string>optimize</string>
+        </property>
+       </widget>
+      </item>
+      <item row="10" column="0">
+       <widget class="QLabel" name="label_r">
+        <property name="text">
+         <string>r</string>
+        </property>
+       </widget>
+      </item>
+      <item row="10" column="1">
+       <widget class="QDoubleSpinBox" name="doubleSpinBox_collisionradius">
+        <property name="decimals">
+         <number>4</number>
+        </property>
+        <property name="maximum">
          <double>1.000000000000000</double>
+        </property>
+        <property name="singleStep">
+         <double>0.001000000000000</double>
+        </property>
+        <property name="value">
+         <double>0.001000000000000</double>
+        </property>
+       </widget>
+      </item>
+      <item row="3" column="0">
+       <widget class="QPushButton" name="pushButton_test">
+        <property name="text">
+         <string>test it</string>
         </property>
        </widget>
       </item>
@@ -197,23 +275,23 @@
         </property>
        </widget>
       </item>
-      <item row="7" column="1">
-       <widget class="QDoubleSpinBox" name="doubleSpinBox_TwistingEnergyCoef">
-        <property name="maximum">
-         <double>9999.989999999999782</double>
-        </property>
-        <property name="value">
-         <double>1.000000000000000</double>
-        </property>
-       </widget>
-      </item>
       <item row="12" column="1">
        <widget class="QSpinBox" name="spinBox_twist_times"/>
       </item>
-      <item row="12" column="0">
-       <widget class="QLabel" name="label_twist_times">
+      <item row="16" column="0">
+       <widget class="QLabel" name="label_2">
         <property name="text">
-         <string>twist times</string>
+         <string>max steps num</string>
+        </property>
+       </widget>
+      </item>
+      <item row="16" column="1">
+       <widget class="QSpinBox" name="spinBox_max_step">
+        <property name="maximum">
+         <number>200000</number>
+        </property>
+        <property name="value">
+         <number>5000</number>
         </property>
        </widget>
       </item>
@@ -287,7 +365,7 @@
       <item row="1" column="0">
        <widget class="QCheckBox" name="checkBox_derivativesCheck">
         <property name="text">
-         <string>derivatives</string>
+         <string>derivatives check</string>
         </property>
         <property name="checked">
          <bool>true</bool>
