--- a/elastic/elasticpanel.ui
+++ b/elastic/elasticpanel.ui
@@ -227,7 +227,7 @@
          <double>99999.990000000005239</double>
         </property>
         <property name="value">
-         <double>1000.000000000000000</double>
+         <double>10.000000000000000</double>
         </property>
        </widget>
       </item>
@@ -276,7 +276,11 @@
        </widget>
       </item>
       <item row="12" column="1">
-       <widget class="QSpinBox" name="spinBox_twist_times"/>
+       <widget class="QSpinBox" name="spinBox_twist_times">
+        <property name="minimum">
+         <number>-99</number>
+        </property>
+       </widget>
       </item>
       <item row="16" column="0">
        <widget class="QLabel" name="label_2">
