--- a/elastic/elasticpanel.ui
+++ b/elastic/elasticpanel.ui
@@ -139,7 +139,7 @@
          <double>0.000100000000000</double>
         </property>
         <property name="value">
-         <double>0.000100000000000</double>
+         <double>0.001000000000000</double>
         </property>
        </widget>
       </item>
@@ -295,7 +295,14 @@
          <number>200000</number>
         </property>
         <property name="value">
-         <number>10000</number>
+         <number>100000</number>
+        </property>
+       </widget>
+      </item>
+      <item row="4" column="1">
+       <widget class="QPushButton" name="pushButton_projectionThread">
+        <property name="text">
+         <string>Proj Thread</string>
         </property>
        </widget>
       </item>
